# CharPyLS

./: .gitignore  .gitmodules  MANIFEST.in  README.md  RELEASE.md  license.txt  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: pr-tests.yml  release-wheels.yml
jpeg_ls/: CharLS.py  _CharLS.cpp  _CharLS.pyx  __init__.py  data_io.py  define_charls_dll.h  example.py
jpeg_ls/test/: band_resid.dat.hdr  data_temp.jls  gray16_254.dat.hdr  gray16_raw.dat.hdr  gray_raw.dat.hdr  gray_raw_IrfanView.jls  test_jpeg_ls.py
jpeg_ls/tests/: test_decode.py  test_encode.py
